--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     <nav>
       <ul>
         <li class="fork"><a href="{{site.baseurl}}/">Home</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/csp">Ideas and Plans</a></li>
       </ul>
     </nav>
   </div><!-- end header -->
