it still does not work
I think the cloudflare may need some adjusting.

--- a/_layouts/blogs.html
+++ b/_layouts/blogs.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<script src="{{ url_for('static', filename='js/assets/three.r119.min.js') }}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.cells.min.js"></script>
+<script src="{{ url_for('static', filename='js/three.r119.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/vanta.birds.min.js') }}"></script>
 <script>
     VANTA.BIRDS({
         el: "body",
