added an about page for the project

--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -36,11 +36,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <span class="w3-tag w3-xlarge">Made by Saaras, Will, Andrew, Ryan, Daniel</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white w3-hide-small" style="font-size:100px">Del Norte<br>Geoguessr</span>
+    <span class="w3-text-white w3-hide-small" style="font-size:100px">Del Norte Geoguessr</span>
     
     <p><a href="#menu" class="w3-button w3-xxlarge w3-black">start</a></p>
   </div>
 </header>
+
 
 <!-- Menu Container -->
 <div class="w3-container w3-black w3-padding-64 w3-xxlarge" id="menu">
@@ -136,3 +137,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     </script>
 </body>
 </html>
+<!-- About Container -->
+<div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
+    <div class="w3-content">
+      <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">About</h1>
+      <p>GeoGuessr is an engaging and addictive online geographic guessing game that challenges players to test their knowledge of the world and their deduction skills by dropping them in random locations across the globe using Google Street View imagery.
+  Developed by Anton Wallén, GeoGuessr offers a unique and immersive experience for geography enthusiasts, explorers, and trivia buffs.
+  The objective of GeoGuessr is simple: players find themselves in an unfamiliar place, and they must determine their location by exploring the surrounding environment through a series of static images taken from Google Street View. These images can range from bustling urban streets and scenic landscapes to remote, rural areas. Players can pan, zoom, and navigate within these images to gather clues about their whereabouts.
+  To make an educated guess, players can rely on various factors such as architecture, road signs, vegetation, weather conditions, and even the direction of shadows. They can also use their knowledge of geography, languages, and cultures to narrow down the possibilities. Once they feel confident about their guess, they drop a pin on a world map to mark their chosen location..</p>
+      <p><strong></strong> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpyDdWvvJZiSD9CfBo4fMhNRxAa1tDTP53RA&usqp=CAU" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
+  
+      
+    </div>
+  </div>
