Fetch added + game html page added

--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Del Norte Geoguessr</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white w3-hide-small" style="font-size:100px">Del Norte Geoguessr</span>
     
-    <p><a href="#menu" class="w3-button w3-xxlarge w3-black">start</a></p>
+    <p><a href="mapgame.html" class="w3-button w3-xxlarge w3-black">start</a></p>
   </div>
 </header>
 
