--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -58,12 +58,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   </div>
   
 <!-- Devlog Container -->
-<div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="devlog">
+<div class="w3-container w3-padding-64 w3-blue w3-grayscale w3-xlarge" id="devlog">
     <div class="w3-content">
       <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Devlog</h1>
       <p>Saaras: Base 64 stuff ig.</p>
       <p><strong></strong> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" style="width:150px" class="w3-circle w3-right" alt="logo"></p>
-  
+      <div class="w3-container w3-black w3-padding-64 w3-xxlarge" id="menu">
+        <div class="w3-content">
+        
+          <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Devlog</h1>
+          <div class="w3-row w3-center w3-border w3-border-dark-grey">
+            <a href="javascript:void(0)" onclick="openMenu(event, 'Pizza');" id="myLink">
+              <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Saaras</div>
+            </a>
+            <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');">
+              <div class="w3-col s4 tablink w3-padding-large w3-hover-red">William</div>
+            </a>
+            <a href="javascript:void(0)" onclick="openMenu(event, 'Starter');">
+              <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Ryan</div>
+            </a>
+          </div>
+       
+      
+          <div id="Pizza" class="w3-container menu w3-padding-32 w3-white">
+            <h1><b>Oct 6. </b> <span class="w3-right w3-tag w3-dark-grey w3-round"> 1 commit </span></h1>
+            <p class="w3-text-grey">idk saaras stuff</p>
+            <hr>
       
     </div>
   </div>
