--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -36,7 +36,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <span class="w3-tag w3-xlarge">Made by Saaras, Will, Andrew, Ryan, Daniel</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white w3-hide-small" style="font-size:100px">Del Norte Goeguessr</span>
+    <span class="w3-text-white w3-hide-small" style="font-size:100px">Del Norte Geoguessr</span>
     
     <p><a href="mapgame.html" class="w3-button w3-xxlarge w3-black">start</a></p>
   </div>
