--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -24,12 +24,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
     <a href="#" class="w3-bar-item w3-button">HOME</a>
-    <a href="#menu" class="w3-bar-item w3-button">RULES</a>
+    <a href="#rules" class="w3-bar-item w3-button">RULES</a>
     <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
     <a href="#devlog" class="w3-bar-item w3-button">DEVLOG</a>
   </div>
 </div>
   
+
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-padding">
@@ -42,6 +43,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   </div>
 </header>
 
+<!-- Rules Container -->
+<div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="rules">
+  <div class="w3-content">
+    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Rules</h1>
+    <p>Once the game loads, there will be an image of a random place on Del Norte. Your job is to click on the map where you think the location is. If you get the answer wrong, then a new picture will automatically appear for you to try a different location. If you get the answer right, a pop up will state that you get one point.</p>
 
 <!-- About Container -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
