--- a/_layouts/homelayout.html
+++ b/_layouts/homelayout.html
@@ -44,10 +44,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </header>
 
 <!-- Rules Container -->
-<div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="rules">
+<div class="w3-container w3-padding-64 w3-blue w3-grayscale w3-xlarge" id="rules">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Rules</h1>
-    <p>Once the game loads, there will be an image of a random place on Del Norte. Your job is to click on the map where you think the location is. If you get the answer wrong, then a new picture will automatically appear for you to try a different location. If you get the answer right, a pop up will state that you get one point.</p>
+    <p>Once the game loads, there will be an image of a random place on Del Norte. 
+      Your job is to click on the map where you think the location is. If you get the answer wrong, then a new picture will automatically appear for you to try a different location. 
+      If you get the answer right, a pop up will state that you get one point. 
+      Try to get as many right as you can! At the end of the game, a leaderboard will pop up which shows the scores of other players.
+      There is also a 1 minute timer which will cause the game to end. Make sure to guess as fast as you can! Time is not on your side!
+    <br> 
+    <br> 
+    <br> 
+    <br>
+    <br> 
+    <br> 
+    <br> 
+    <br>
+    </p>
 
 <!-- About Container -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
